--- a/css/resume.css
+++ b/css/resume.css
@@ -47,6 +47,16 @@ h2 {
   text-align: justify;
 }
 
+/* Back-to-top button*/
+.back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
+    z-index: 1;
+}
+
 .list-social-icons a {
   color: #495057;
 }
@@ -170,7 +180,19 @@ a:hover, a:focus, a:active {
   color: #1A5276;
 }
 
+#link_Simplon {
+  text-decoration: none;
+}
 
+#logo_Simplon {
+  width: 32%;
+}
+
+/************* INTERESTS ******************/
+#interests {
+  border-bottom: 1px solid #ffffff;
+  z-index: 0;
+}
 .card-img-top {
   position: relative;
   float: left;
@@ -181,15 +203,9 @@ a:hover, a:focus, a:active {
   background-size: cover;
 }
 
-footer {
-  margin-top: 60px;
-  text-align: center;
-}
+/************* / INTERESTS ************/
 
-.back-to-top {
-    cursor: pointer;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    display:none;
+footer {
+  margin-bottom: 15px;
+  text-align: center;
 }
